--- a/about.html
+++ b/about.html
@@ -93,14 +93,13 @@
 				</div>
 				<div class="col-md-8">
 					<p class="content-theme-1">
-						SRM Institute of Science and Technology (SRMIST) is one of the pioneering engineering institutions of INDIA, was established in 1985. It offers a wide range of programs as Undergraduate, Post graduate and Doctoral courses. SRMIST has collaboration with
+						SRM Institute of Science and Technology (SRMIST) is one of the pioneering engineering institutions of INDIA, established in the year 1985. It offers a wide range of programs as Undergraduate, Post graduate and Doctoral courses. SRMIST has collaboration with
 						the leading institutions globally to provide a platform and experience international standards in Education and Research to SRM Students & Researchers.
 					</p>
 				</div>
 				<div class="col-md-12 pt-5">
 					<p class="content-theme-1">
-						SRM group of institutions are span across India with 4 main campuses and 7 other groups of institution attracting students both from India and Abroad. Academically SRM offers global faculty members, flexible and dynamic curriculum, exciting research and
-						global connections are features that set SRM apart. SRM frontrunners are their Internal and Corporate Advisory Board who play a key role in formulating academic and research after interaction with faculties and students. <br /><br /> SRMIST
+						SRM group of institutions span across India with 4 main campuses and 7 other groups of institution attracting students both from India and Abroad. Among the features that set SRM apart are, its global faculty members, flexible and dynamic curriculum, exciting research and global connections. Internal and Corporate Advisory Board interact with faculties and the students who form the SRM frontrunners, thus playing a key role in formulating the academic and research collaboration. <br /><br /> SRMIST
 						research covers all major academic disciplines to establish state of the art multi-disciplinary, inter-disciplinary and co-disciplinary research institute in a dynamic, competitive and vibrant environment. SRMIST has key facilities like Nano Technology
 						research Centre, Centre for Environmental Nuclear Research (CERN), Centre for Advanced Concrete Research (CACR), Interdisciplinary Institute of Indian System of Medicine (IIISM), Earthquake Research Cell, Medical Research Centre, Indian Nodal Bioethics
 						Centre of the UNESCO International Chair on Bioethics, Bioengineering, Multidisciplinary Research, Funded and Undergraduate Research. SRM School of Computing has lab infrastructure is supported by Government, Corporate and In-House labs like Big
