--- a/speakers.html
+++ b/speakers.html
@@ -88,26 +88,123 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-3 col-sm-6">
+				
+
+				<div class="col-lg-4 col-sm-12">
 					<div class="single-member">
-						<div class="thumb relative" style="background: url(img/profile-default.jpg);">
+						<div class="thumb relative" style="background: url(img/dakyo.jpg);">
 							<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-								<p class="text-white">Description</p>
-								<div class="line"></div>
+								<p class="text-white">Prof. Brayima DAKYO was born in Burkina Faso (West Africa). He has received Engineer Dipl. (1984) Doctor in Engineering (1987)<br>
+
+Professional position:<br>
+Dr Dakyo has joined the University of Le Havre as assistant professor(MdC) from 1989 to 1999</p>
+								<!-- <div class="line"></div>
 								<div class="social d-flex align-items-center justify-content-center">
 									<a href="#"><i class="fa fa-envelope"></i></a>
 									<a href="#"><i class="fa fa-phone"></i></a>
 									<a href="#"><i class="fa fa-globe"></i></a>
 									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="desc text-center">
-							<h5 class="text-uppercase"><a href="#">Name</a></h5>
-							<p>Designation</p>
+							<h5 class="text-uppercase"><a href="#">Professor BrayimaDAKYO</a></h5>
+							<p>Université du Havre, France</p>
 						</div>
 					</div>
 				</div>
+
+				<div class="col-lg-4 col-sm-12">
+					<div class="single-member">
+						<div class="thumb relative" style="background: url(img/ramzan.jpg);">
+							<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+								<p class="text-white">Prof. Dr. Ramazan BAYINDIR, completed his undergraduate studies at Gazi University, Electrical Education Dep. in 1992 and received his M.Sc. and Ph.D. degrees from the Institute of Science & Technology, Gazi University in 1998 and in 2002 respectively. Dr. Ramazan BAYINDIR worked as a Research Assistant</p>
+								<!-- <div class="line"></div>
+								<div class="social d-flex align-items-center justify-content-center">
+									<a href="#"><i class="fa fa-envelope"></i></a>
+									<a href="#"><i class="fa fa-phone"></i></a>
+									<a href="#"><i class="fa fa-globe"></i></a>
+									<a href="#"><i class="fa fa-linkedin"></i></a>
+								</div> -->
+							</div>
+						</div>
+						<div class="desc text-center">
+							<h5 class="text-uppercase"><a href="#">Dr RamazanBayindir</a></h5>
+							<p>Gazi University, TURKEY</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-sm-12">
+					<div class="single-member">
+						<div class="thumb relative" style="background: url(img/rajan.jpg);">
+							<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+								<p class="text-white">Dr. Pradhan’s research interest is in the broad areas of biomedical control systems and computationalsystems biology, with the specific focus on mathematical and computational approaches to humanphysiology. He is currently investigating the cellular mechanisms of the control of coronary vascularresistance in the normal heart, and in ischemic heart disease. Prior to joining the University of Michiganas a research faculty.</p>
+								<!-- <div class="line"></div>
+								<div class="social d-flex align-items-center justify-content-center">
+									<a href="#"><i class="fa fa-envelope"></i></a>
+									<a href="#"><i class="fa fa-phone"></i></a>
+									<a href="#"><i class="fa fa-globe"></i></a>
+									<a href="#"><i class="fa fa-linkedin"></i></a>
+								</div> -->
+							</div>
+						</div>
+						<div class="desc text-center">
+							<h5 class="text-uppercase"><a href="#">Dr. Ranjan Pradhan, Ph.D.</a></h5>
+							<p>Research Investigator, Department of Molecular and Integrative Physiology, University of Michigan,</p>
+						</div>
+					</div>
+				</div>
+
+
+<div class="col-lg-2"></div>
+
+				<div class="col-lg-4 col-sm-12">
+					<div class="single-member">
+						<div class="thumb relative" style="background: url(img/kyung.jpg);">
+							<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+								<p class="text-white">•	He has 31 Years of experience in various universities and research centers in the field of Electronics and Telecommunication Engineering.</p>
+								<!-- <div class="line"></div>
+								<div class="social d-flex align-items-center justify-content-center">
+									<a href="#"><i class="fa fa-envelope"></i></a>
+									<a href="#"><i class="fa fa-phone"></i></a>
+									<a href="#"><i class="fa fa-globe"></i></a>
+									<a href="#"><i class="fa fa-linkedin"></i></a>
+								</div> -->
+							</div>
+						</div>
+						<div class="desc text-center">
+							<h5 class="text-uppercase"><a href="#">Kyung-tae KIM </a></h5>
+							<p>Dept. of Information and Communication Engineering, 
+Hannam University, Daejeon, South Korea 
+</p>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-lg-4 col-sm-12">
+					<div class="single-member">
+						<div class="thumb relative" style="background: url(img/dash.jpg);">
+							<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+								<p class="text-white">Subhransu Sekhar Dash received his Engineering Degree from Institution of Engineers (India) and M.Tech from U.C.E, Burla, Odisha in 1994, and 1996 respectively. He received the Ph.D. degree in Power Systems Engineering from the Electrical and Electronics Engineering Department, Anna University, TN</p>
+								<!-- <div class="line"></div>
+								<div class="social d-flex align-items-center justify-content-center">
+									<a href="#"><i class="fa fa-envelope"></i></a>
+									<a href="#"><i class="fa fa-phone"></i></a>
+									<a href="#"><i class="fa fa-globe"></i></a>
+									<a href="#"><i class="fa fa-linkedin"></i></a>
+								</div> -->
+							</div>
+						</div>
+						<div class="desc text-center">
+							<h5 class="text-uppercase"><a href="#">Dr. Subhransu Sekhar Dash</a></h5>
+							<p>Govt. College of Engineering, Keonjhar, Odisha, India.</p>
+						</div>
+					</div>
+				</div>
+
+
 			</div>
 		</div>
 	</section>
