--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<div class="col-md-8">
 					<p class="content-theme-1">
 						This conference is to provide an international forum for industry professionals and researchers to deliberate and state their research findings, discuss the latest advancements and explore the future directions in the emerging areas of Engineering and
-						Technology. The conference also bring together both novice and experienced scientists and developers, to meet new colleagues, collect new ideas and establish new cooperation between research groups and provide a platform for researchers from academic
+						Technology. The conference aims to bring together both novice and experienced scientists with developers, to meet new colleagues, collect new ideas and establish new cooperation between research groups and provide a platform for researchers from academic
 						and industry to present their original work and exchange ideas, information, techniques and applications in the field of Software Engineering, networking, Big Data, Cloud Computing, Data Analytics, IOT and other blooming areas of research.
 					</p>
 				</div>
@@ -142,6 +142,20 @@
 		</div>
 	</section>
 	<!-- End Theme Area -->
+
+	<!-- <div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12 alerts">
+				<h2>NEWS AND ALERT</h2>
+				<marquee direction="up" scrollamount="2">
+					<ul>
+						<li>sdfsdfsdf</li><br>
+						<li>aasaasas</li>
+					</ul>		
+				</marquee>	
+			</div>		
+		</div>	
+	</div>	 -->
 
 	<footer class="section-full">
 		<div class="container">
