news and alert div

--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
 						The Research Division of Software Engineering Department covers various aspects of Computer Vision, Software Process & Engineering, Network Systems & Services and Computing Technologies. The key player for this conference is the Computer Vision research
 						group working in major research fields of Artificial Intelligence, Big Data Analytics, IoT, Machine & Deep Learning, Image Processing, Augmented Reality and Robotics. The Networking Systems and Services group graft on research areas such as Wireless
 						Sensor Networks, Adhoc Networks, VANET and Security. Computing Technologies group concentrates on Data Mining, Analysis and Prediction, Human Computer Interface, Virtual Reality, Brain Computing, Distributed Computing, Social Media Network, Mobile
-						and Pervasive Computing. There is an active and growing area of research in the field Software Engineering as Measurements, Metric, Testing, Verification & Validation and Reliability, whilst collaborating with each other and a variety of industrial
-						partners like LDRA.
+						and Pervasive Computing. There is an active and growing area of research in the field Software Engineering to design applicable solutions in one or more application domains using software engineering approaches that integrate ethical, social, legal and economic concerns, Apply new software models, techniques and technologies to bring out innovative and novelistic solutions, whilst collaborating with each other and a variety of industrial
+						partners like Amazon, Wipro, Capgemini, LDRA.
 					</p>
 				</div>
 				<div class="col-md-12 pt-5">
