--- a/index.html
+++ b/index.html
@@ -143,19 +143,21 @@
 	</section>
 	<!-- End Theme Area -->
 
-	<!-- <div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 alerts">
-				<h2>NEWS AND ALERT</h2>
-				<marquee direction="up" scrollamount="2">
+	<div class="container">
+		<div class="row news_container">
+			<div class="col-md-2"></div>
+			<div class="col-md-8 col-sm-12 alerts">
+				<h2>NEWS AND ALERT</h2><BR><BR>
+				<marquee direction="up" scrollamount="2" class="alert_marquee">
 					<ul>
-						<li>sdfsdfsdf</li><br>
-						<li>aasaasas</li>
+						<li>Paper Submission: <b> January 10th, 2019</b></li><br>
+						<li>Acceptance Notification: <b> February 22nd, 2019</b></li><br>
+						<li>Registration and camera ready: <b> March 10th, 2019</b></li>
 					</ul>		
 				</marquee>	
 			</div>		
 		</div>	
-	</div>	 -->
+	</div>	
 
 	<footer class="section-full">
 		<div class="container">
