--- a/call.html
+++ b/call.html
@@ -94,10 +94,10 @@
 					</h4>
 				</div>
 				<div class="col-md-4 pt-4">
-					• Artificial intelligence <br> • Software Engineering<br>• Ubiquitos Computing <br> • Big data Analytics<br> • Computer Networks<br> • Scientific Computing<br> • Wireless Sensor Networks<br> • Pervasive Computing<br>• Evalutionary Computing<br> • Grid and Cloud Computing<br> • Internet of Things<br> • Digital Image Processing<br>					• Watermarking<br> • Information Retrieval<br> • Mobile Computing<br> • Multimedia Applications<br> 
+					• Artificial intelligence <br> • Software Engineering<br>• Ubiquitos Computing <br>• Fuzzy Logic <br>• Big data Analytics<br> • Computer Networks<br> • Scientific Computing<br> • Wireless Sensor Networks<br>• Machine Learning <br>•Deep Learning <br>•Artificial Neural Networks <br>•Genetic Engineering <br>• Pervasive Computing<br>• Evalutionary Computing<br> • Grid and Cloud Computing<br> • Internet of Things <br>• Cyber Security<br> • Digital Image Processing<br>					• Watermarking<br> • Information Retrieval<br> • Mobile Computing<br> <!-- • Multimedia Applications<br> --> 
 				</div>
 				<div class="col-md-4 pt-4">
-					• Simulation and Optimization<br> • Decision and Support System<br> • Game Theory<br> • Microprocessor based Technologies.<br>  • Data Structures & Algorithms<br>• Automated Software Engineering<br> • Bioinformatics<br> • Computer Graphics & Virtual Reality<br> • Image Analysing<br> • Pattern Recognition<br> • Computer Aided Design/Manufacturing<br>	 • Distributed Systems <br>• Internet and Web Applications<br>• Security and Cryptography<br>• Embedded Software Engineering <br>• Soft Computing Applications in Diagnosis and sensing systems
+					• Simulation and Optimization<br> • Decision and Support System<br> • Game Theory<br> • Microprocessor based Technologies.<br>  • Data Structures & Algorithms<br>• Automated Software Engineering<br> • Bioinformatics <br>• Data Mining<br> • Computer Graphics & Virtual Reality<br> • Image Analysing<br> • Pattern Recognition<br> • Computer Aided Design/Manufacturing<br>	 • Distributed Systems <br>• Internet and Web Applications<br>• Cryptography and Security<br>• Embedded Software Engineering <br>• Soft Computing Applications in Diagnosis and sensing systems <br>• Multimedia Applications<br>• Webservices<br>
 				</div>
 			</div>
 		</div>
