--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 	<div class="container">
 		<div class="row news_container">
-			<div class="col-md-2"></div>
+			<!-- <div class="col-md-2"></div> -->
 			<div class="col-md-8 col-sm-12 alerts">
 				<h2>NEWS AND ALERT</h2><BR><BR>
 				<marquee direction="up" scrollamount="2" class="alert_marquee">
@@ -155,7 +155,12 @@
 						<li>Registration and camera ready: <b> March 10th, 2019</b></li>
 					</ul>		
 				</marquee>	
-			</div>		
+			</div>	
+			<div class="col-md-1"></div>
+			<div class="col-md-3 col-sm-12 download_brochure">
+				<br>
+				<h2>Download Brochure</h2>
+			</div>	
 		</div>	
 	</div>	
 
