--- a/oc.html
+++ b/oc.html
@@ -102,6 +102,10 @@
 <span class="glyphicon glyphicon-user"></span>Prof. S. Amudha, SRMIST, Chennai, India<br>
 <span class="glyphicon glyphicon-user"></span>   Prof. B. Jothi, SRMIST, Chennai, India<br>
 <span class="glyphicon glyphicon-user"></span>Prof. C. Arun  , SRMIST, Chennai, India.<br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Ramraj  , SRMIST, Chennai, India.<br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Joseph James  , SRMIST, Chennai, India.<br>
+<span class="glyphicon glyphicon-user"></span>Prof. A. Saranya  , SRMIST, Chennai, India.<br>
+<span class="glyphicon glyphicon-user"></span>Prof. H. Karthikeyan  , SRMIST, Chennai, India.<br>
 
 
 					</div>
