--- a/patrons.html
+++ b/patrons.html
@@ -95,6 +95,7 @@
 <span class="glyphicon glyphicon-user"></span> Dr. Sandeep Sancheti, Vice Chancellor, SRMIST, India.<br>
 <span class="glyphicon glyphicon-user"></span> Dr. T. P. Ganesan, Pro-Vice Chancellor, SRMIST, India.<Br>
 <span class="glyphicon glyphicon-user"></span> Dr. C. Muthamizhchelvan, Director (E&T), SRMIST, Chennai, India<Br>
+<span class="glyphicon glyphicon-user"></span>  Dr. D. Narayanan Rao, Director (Research), SRMIST, Chennai<br>
 
 
 					</div>
