--- a/pr.html
+++ b/pr.html
@@ -93,7 +93,7 @@
 					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
 
 
-    <span class="glyphicon glyphicon-user"></span>  Dr. Sridhar Krishnaswamy, SRMIST,  Chennai, India<br>
+    <span class="glyphicon glyphicon-user"></span>  Prof. C.G. Anupama, SRMIST,  Chennai, India<br>
 <span class="glyphicon glyphicon-user"></span> Prof. V. Haribaabu, SRMIST, Chennai, India<br>
 
 
