--- a/publicity.html
+++ b/publicity.html
@@ -93,7 +93,7 @@
 					<div class="col-md-7 col-sm-12 com_names animated slideInRight">
 
 <span class="glyphicon glyphicon-user"></span>Prof. S. Krishnaveni, SRMIST, Chennai, India<br>
-<span class="glyphicon glyphicon-user"></span>Prof. C.G.Anupama, SRMIST, Chennai, India<Br>
+<span class="glyphicon glyphicon-user"></span>Prof. S. Aruna, SRMIST, Chennai, India<Br>
 
 
 
