--- a/contact (2).html
+++ b/contact (2).html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Contact</title>
+	<title>Venue</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 	<!--
@@ -77,27 +77,37 @@
 	</header>
 	<!-- End Header Area -->
 
-	<!-- Start Contact Area -->
-	<section class="section-full gray-bg partial-p" style="height:100vh;">
+	<!-- Start Venue Area -->
+	<section class="section-full gray-bg partial-p">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="section-title text-center">
-						<h1 class="text-uppercase">Contact</h1>
+						<h1 class="text-uppercase">Venue</h1>
 					</div>
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-md-12">
+				<div class="col-md-4 col-sm-12">
 					<h4 class="text-center">
-						Prof. Sivakumar V / Prof. Anupama C.G<br>
-						+91 8778863135 / +91 9677133931 <br><a href="http://srmuniv.ac.in" target="_blank">www.srmuniv.ac.in</a><br><br>
+						SRM Institute of Science and Technology:
 					</h4>
+					<div class="text-center">Potheri, Mahatma Gandhi Road,<br> SRM Nagar, Kattankulathur,<br> Tamil Nadu 603203<br><br>
+						<a href="https://www.google.co.in/maps/dir/''/srm+university/@12.8231353,79.9757615,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d37c35faf:0x150be8ecf0c8f817!2m2!1d80.045802!2d12.8231446" target="_blank"><button class="btn btn-default">Get Directions</button></a>
+					</div>
 				</div>
+				<div class="col-md-8 col-sm-12 pt-4">
+					<div class="mapouter">
+						<div class="gmap_canvas">
+							<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=srm%20university%20potheri&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</section>
-	<!-- End Contact Area -->
+	<!-- End Venue Area -->
 
 	<footer class="section-full">
 		<div class="container">
