--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
 								<li><a href="./call.html">Call for Papers</a></li>
 								<li><a href="#">Paper Submission</a></li>
 								<li><a href="./important-dates.html">Important Dates</a></li>
-								<li><a href="./venue.html">Venue</a></li>
-								<li><a href="./contact.html">Contact</a></li>
+								<!-- <li><a href="./venue.html">Venue</a></li>
+								<li><a href="./contact.html">Contact</a></li> -->
+								<li class="dropdown">
+									<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="./venue.html">Venue</a>
+										<a class="dropdown-item" href="./contact.html">Contact</a>
+									</div>
+								</li>
+
 							</ul>
 							<a href="#" class="mobile-btn"><span class="lnr lnr-menu"></span></a>
 						</nav>
